--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     environment:
       - OLLAMA_ENDPOINT=${OLLAMA_ENDPOINT:-http://10.10.10.216:11434}
       - OLLAMA_MODEL=${OLLAMA_MODEL:-llama3.2:3b}
-      - NEXT_PUBLIC_SOCKET_URL=http://localhost:3567
+      - NEXT_PUBLIC_SOCKET_URL=https://gamesocket1
     restart: always
 
   socket-server:
